test: refactor unit tests to remove code duplication